[shasha] feat-1.2: add Q1

--- a/index.html
+++ b/index.html
@@ -26,9 +26,22 @@
     <td>
       <form name="my_Form" method="POST">
         姓名：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="王小闹">
-        </form>
+      </form>
     </td> 
   </tr>
 </table>
+<h2>一、填空题（每空5分，共20分）</h2>
+<ol>
+  <li> 
+    <form name="my_Form" method="POST">
+      UML的中文全称是：<input type="text" value ="统一建模语言"> 
+    </form>
+  </li>
+  <li>
+    <form name="my_Form" method="POST">
+      对象最突出的特征是：<input type="text" value ="封装性">&nbsp<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
+    </form>
+  </li>
+</ol>
 </body>
 </html>
