[shasha] feat-1.2: add Q2

--- a/index.html
+++ b/index.html
@@ -33,15 +33,42 @@
 <h2>一、填空题（每空5分，共20分）</h2>
 <ol>
   <li> 
-    <form name="my_Form" method="POST">
+    <form>
       UML的中文全称是：<input type="text" value ="统一建模语言"> 
     </form>
   </li>
   <li>
-    <form name="my_Form" method="POST">
+    <form>
       对象最突出的特征是：<input type="text" value ="封装性">&nbsp<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
     </form>
   </li>
 </ol>
+<h2>二、选择题（每题10分，共20分）</h2>
+<ol>
+    <li> 
+      UML与软件工程的关系是：
+      <form>
+        <input type="radio" name="answer" value ="answer">(A) UML就是软件工程
+      <br>
+        <input type="radio" name="answer" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
+      <br>
+        <input type="radio" name="answer" value ="answer">(C) UML与软件工程无关
+      <br>
+        <input type="radio" name="answer" value ="answer">(D) UML是软件工程的一部分
+      </form>
+    </li>
+    <li>
+        Java语言支持：
+      <form>
+        <input type="radio" name="answer" value ="answer" checked>(A) 单继承
+        <br>
+        <input type="radio" name="answer" value ="answer">(B) 多继承
+        <br>
+        <input type="radio" name="answer" value ="answer">(C) 单继承和多继承都支持  
+        <br>
+        <input type="radio" name="answer" value ="answer">(D) 单继承和多继承都不支持
+      </form>
+    </li>
+  </ol>
 </body>
 </html>
