--- a/index.html
+++ b/index.html
@@ -5,70 +5,97 @@
     <title>Test</title>
 </head>
 <body>
-<h1>统一建模语言理论测试</h1>
-<table border="0">
-  <tr>
-    <td>考试科目：统一建模语言</td>
-    <td>时间：100分钟</td>
-    <td>得分：100</td>
-  </tr>
-  <tr>
-    <td>
-      <form name="my_Form" method="POST">
-        班级：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="1 班"> 
-      </form>
-    </td>
-    <td>
-      <form name="my_Form" method="POST">
-        学号：&nbsp<input type="text" value ="001"> 
-      </form>
-    </td> 
-    <td>
-      <form name="my_Form" method="POST">
-        姓名：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="王小闹">
-      </form>
-    </td> 
-  </tr>
-</table>
-<h2>一、填空题（每空5分，共20分）</h2>
-<ol>
-  <li> 
-    <form>
-      UML的中文全称是：<input type="text" value ="统一建模语言"> 
-    </form>
-  </li>
-  <li>
-    <form>
-      对象最突出的特征是：<input type="text" value ="封装性">&nbsp<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
-    </form>
-  </li>
-</ol>
-<h2>二、选择题（每题10分，共20分）</h2>
-<ol>
+  <h1>统一建模语言理论测试</h1>
+  <table border="0">
+    <tr>
+      <td>考试科目：统一建模语言</td>
+      <td>时间：100分钟</td>
+      <td>得分：100</td>
+    </tr>
+    <tr>
+      <td>
+        <form name="my_Form" method="POST">
+          班级：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="1 班"> 
+        </form>
+      </td>
+      <td>
+        <form name="my_Form" method="POST">
+          学号：&nbsp<input type="text" value ="001"> 
+        </form>
+      </td> 
+      <td>
+        <form name="my_Form" method="POST">
+          姓名：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="王小闹">
+        </form>
+      </td> 
+    </tr>
+  </table>
+  <h2>一、填空题（每空5分，共20分）</h2>
+  <ol>
     <li> 
-      UML与软件工程的关系是：
       <form>
-        <input type="radio" name="answer" value ="answer">(A) UML就是软件工程
-      <br>
-        <input type="radio" name="answer" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
-      <br>
-        <input type="radio" name="answer" value ="answer">(C) UML与软件工程无关
-      <br>
-        <input type="radio" name="answer" value ="answer">(D) UML是软件工程的一部分
+        UML的中文全称是：<input type="text" value ="统一建模语言"> 
       </form>
     </li>
     <li>
-        Java语言支持：
       <form>
-        <input type="radio" name="answer" value ="answer" checked>(A) 单继承
-        <br>
-        <input type="radio" name="answer" value ="answer">(B) 多继承
-        <br>
-        <input type="radio" name="answer" value ="answer">(C) 单继承和多继承都支持  
-        <br>
-        <input type="radio" name="answer" value ="answer">(D) 单继承和多继承都不支持
+        对象最突出的特征是：<input type="text" value ="封装性">&nbsp<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
       </form>
     </li>
   </ol>
-</body>
-</html>
+  <h2>二、选择题（每题10分，共20分）</h2>
+  <ol>
+    <li> 
+        UML与软件工程的关系是：
+        <form>
+          <input type="radio" name="answer" value ="answer">(A) UML就是软件工程
+        <br>
+          <input type="radio" name="answer" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
+        <br>
+          <input type="radio" name="answer" value ="answer">(C) UML与软件工程无关
+        <br>
+          <input type="radio" name="answer" value ="answer">(D) UML是软件工程的一部分
+        </form>
+    </li>
+    <li>
+          Java语言支持：
+        <form>
+          <input type="radio" name="answer" value ="answer" checked>(A) 单继承
+          <br>
+          <input type="radio" name="answer" value ="answer">(B) 多继承
+          <br>
+          <input type="radio" name="answer" value ="answer">(C) 单继承和多继承都支持  
+          <br>
+          <input type="radio" name="answer" value ="answer">(D) 单继承和多继承都不支持
+        </form>
+    </li>
+  </ol>
+  <h2>三、多择题（每题10分，共20分）</h2>
+  <ol>
+    <li>
+      用例的粒度分为以下哪三种：
+      <form>
+        <input type="checkbox" name="granularity" value="answer" checked>(A) 概述级
+        <br>
+        <input type="checkbox" name="granularity" value="answer" checked>(B) 需求级 
+        <br>
+        <input type="checkbox" name="granularity" value="answer">(C) 用户目标级
+        <br>
+        <input type="checkbox" name="granularity" value="answer" checked>(D) 子功能级
+      </form>
+    </li>
+    <li>
+      类图由以下哪三部分组成：
+      <form>
+        <input type="checkbox" name="component" value="answer" checked>(A) 名称(Name)
+        <br>
+        <input type="checkbox" name="component" value="answer" checked>(B) 属性(Attribute)
+        <br>
+        <input type="checkbox" name="component" value="answer" checked>(C) 操作(Operation)
+        <br>
+        <input type="checkbox" name="component" value="answer">(D) 方法(Function)
+      </form>
+    </li>
+  </ol>
+  </body>
+  </html>
