--- a/index.html
+++ b/index.html
@@ -97,5 +97,22 @@
       </form>
     </li>
   </ol>
+  <h2>四、判断题（每题10分，共20分）</h2>
+  <ol>
+    <li>
+      <form>
+        用例图只是用于和客户交流和沟通的,用于确定需求。
+        <input type="radio" name="answer" value ="answer">√
+        <input type="radio" name="answer" value ="answer" checked>×
+      </form>
+    </li>
+    <li>
+      <form>
+          在状态图中,终止状态在一个状态图中允许有任意多个。
+        <input type="radio" name="answer" value ="true" checked>√
+        <input type="radio" name="answer" value ="fault">×
+      </form>  
+    </li>
+  </ol>
   </body>
   </html>
