--- a/index.html
+++ b/index.html
@@ -114,5 +114,17 @@
       </form>  
     </li>
   </ol>
+  <h2>五、简答题（每题20分，共20分）</h2>
+  <ol>
+    <li>
+      简述什么是模型以及模型的表现形式？
+      <form>
+      <textarea name="message" rows="7" cols="110">模型是对现实世界的简化和抽象，模型是对所研究的系统、过程、事物或概念的一种表达形式。可以是物理实体；可以是某
+种图形；或者是一种数学表达式。
+      </textarea>
+      </form>
+    </li>
+  </ol>
+  <button type="button" value="score" onclick="alert('Excellent!')">计算分数</button>
   </body>
   </html>
