[shasha] fix-1.2: modify some format

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <tr>
       <td>
         <form name="my_Form" method="POST">
-          班级：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="1 班"> 
+          班级：&nbsp; &nbsp; &nbsp; &nbsp;<input type="text" value ="1 班"> 
         </form>
       </td>
       <td>
         <form name="my_Form" method="POST">
-          学号：&nbsp<input type="text" value ="001"> 
+          学号：&nbsp;<input type="text" value ="001"> 
         </form>
       </td> 
       <td>
         <form name="my_Form" method="POST">
-          姓名：&nbsp &nbsp &nbsp &nbsp<input type="text" value ="王小闹">
+          姓名：&nbsp; &nbsp; &nbsp; &nbsp;<input type="text" value ="王小闹">
         </form>
       </td> 
     </tr>
@@ -39,7 +39,7 @@
     </li>
     <li>
       <form>
-        对象最突出的特征是：<input type="text" value ="封装性">&nbsp<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
+        对象最突出的特征是：<input type="text" value ="封装性">&nbsp;<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
       </form>
     </li>
   </ol>
@@ -48,25 +48,25 @@
     <li> 
         UML与软件工程的关系是：
         <form>
-          <input type="radio" name="answer" value ="answer">(A) UML就是软件工程
+          <input type="radio" name="relationship" value ="answer">(A) UML就是软件工程
         <br>
-          <input type="radio" name="answer" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
+          <input type="radio" name="relationship" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
         <br>
-          <input type="radio" name="answer" value ="answer">(C) UML与软件工程无关
+          <input type="radio" name="relationship" value ="answer">(C) UML与软件工程无关
         <br>
-          <input type="radio" name="answer" value ="answer">(D) UML是软件工程的一部分
+          <input type="radio" name="relationship" value ="answer">(D) UML是软件工程的一部分
         </form>
     </li>
     <li>
           Java语言支持：
         <form>
-          <input type="radio" name="answer" value ="answer" checked>(A) 单继承
+          <input type="radio" name="language" value ="answer" checked>(A) 单继承
           <br>
-          <input type="radio" name="answer" value ="answer">(B) 多继承
+          <input type="radio" name="language" value ="answer">(B) 多继承
           <br>
-          <input type="radio" name="answer" value ="answer">(C) 单继承和多继承都支持  
+          <input type="radio" name="language" value ="answer">(C) 单继承和多继承都支持  
           <br>
-          <input type="radio" name="answer" value ="answer">(D) 单继承和多继承都不支持
+          <input type="radio" name="language" value ="answer">(D) 单继承和多继承都不支持
         </form>
     </li>
   </ol>
@@ -119,12 +119,11 @@
     <li>
       简述什么是模型以及模型的表现形式？
       <form>
-      <textarea name="message" rows="7" cols="110">模型是对现实世界的简化和抽象，模型是对所研究的系统、过程、事物或概念的一种表达形式。可以是物理实体；可以是某
-种图形；或者是一种数学表达式。
+      <textarea name="message" rows="7" cols="110">模型是对现实世界的简化和抽象，模型是对所研究的系统、过程、事物或概念的一种表达形式。可以是物理实体；可以是某种图形；或者是一种数学表达式。
       </textarea>
       </form>
     </li>
   </ol>
-  <button type="button" value="score" onclick="alert('Excellent!')">计算分数</button>
+    <input type="button" value="计算分数" onclick="alert('Excellent!')">
   </body>
   </html>
