--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Test</title>
 </head>
 <body>
+  <form>
   <h1>统一建模语言理论测试</h1>
   <table border="0">
     <tr>
@@ -14,116 +15,98 @@
     </tr>
     <tr>
       <td>
-        <form name="my_Form" method="POST">
-          班级：&nbsp; &nbsp; &nbsp; &nbsp;<input type="text" value ="1 班"> 
-        </form>
+        班级：&nbsp; &nbsp; &nbsp; &nbsp;<input type="text" value ="1 班"> 
       </td>
       <td>
-        <form name="my_Form" method="POST">
-          学号：&nbsp;<input type="text" value ="001"> 
-        </form>
+        学号：&nbsp;<input type="text" value ="001"> 
       </td> 
       <td>
-        <form name="my_Form" method="POST">
-          姓名：&nbsp; &nbsp; &nbsp; &nbsp;<input type="text" value ="王小闹">
-        </form>
+        姓名：&nbsp; &nbsp; &nbsp; &nbsp;<input type="text" value ="王小闹">
       </td> 
     </tr>
   </table>
   <h2>一、填空题（每空5分，共20分）</h2>
   <ol>
     <li> 
-      <form>
-        UML的中文全称是：<input type="text" value ="统一建模语言"> 
-      </form>
+      UML的中文全称是：<input type="text" value ="统一建模语言"> 
     </li>
     <li>
-      <form>
-        对象最突出的特征是：<input type="text" value ="封装性">&nbsp;<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
-      </form>
+      对象最突出的特征是：<input type="text" value ="封装性">&nbsp;<input type="text" value ="继承性">&nbsp<input type="text" value ="多态性">  
     </li>
   </ol>
   <h2>二、选择题（每题10分，共20分）</h2>
   <ol>
     <li> 
-        UML与软件工程的关系是：
-        <form>
-          <input type="radio" name="relationship" value ="answer">(A) UML就是软件工程
-        <br>
-          <input type="radio" name="relationship" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
-        <br>
-          <input type="radio" name="relationship" value ="answer">(C) UML与软件工程无关
-        <br>
-          <input type="radio" name="relationship" value ="answer">(D) UML是软件工程的一部分
-        </form>
+      UML与软件工程的关系是：
+      <br>
+      <input type="radio" name="relationship" value ="answer">(A) UML就是软件工程
+      <br>
+      <input type="radio" name="relationship" value ="answer" checked>(B) UML参与到软件工程中软件开发过程的几个阶段
+      <br>
+      <input type="radio" name="relationship" value ="answer">(C) UML与软件工程无关
+      <br>
+      <input type="radio" name="relationship" value ="answer">(D) UML是软件工程的一部分
     </li>
     <li>
-          Java语言支持：
-        <form>
-          <input type="radio" name="language" value ="answer" checked>(A) 单继承
-          <br>
-          <input type="radio" name="language" value ="answer">(B) 多继承
-          <br>
-          <input type="radio" name="language" value ="answer">(C) 单继承和多继承都支持  
-          <br>
-          <input type="radio" name="language" value ="answer">(D) 单继承和多继承都不支持
-        </form>
+      ava语言支持：
+      <br>
+      <input type="radio" name="language" value ="answer" checked>(A) 单继承
+      <br>
+      <input type="radio" name="language" value ="answer">(B) 多继承
+      <br>
+      <input type="radio" name="language" value ="answer">(C) 单继承和多继承都支持  
+      <br>
+      <input type="radio" name="language" value ="answer">(D) 单继承和多继承都不支持
     </li>
   </ol>
   <h2>三、多择题（每题10分，共20分）</h2>
   <ol>
     <li>
       用例的粒度分为以下哪三种：
-      <form>
-        <input type="checkbox" name="granularity" value="answer" checked>(A) 概述级
-        <br>
-        <input type="checkbox" name="granularity" value="answer" checked>(B) 需求级 
-        <br>
-        <input type="checkbox" name="granularity" value="answer">(C) 用户目标级
-        <br>
-        <input type="checkbox" name="granularity" value="answer" checked>(D) 子功能级
-      </form>
+      <br>
+      <input type="checkbox" name="granularity" value="answer" checked>(A) 概述级
+      <br>
+      <input type="checkbox" name="granularity" value="answer" checked>(B) 需求级 
+      <br>
+      <input type="checkbox" name="granularity" value="answer">(C) 用户目标级
+      <br>
+      <input type="checkbox" name="granularity" value="answer" checked>(D) 子功能级
     </li>
     <li>
       类图由以下哪三部分组成：
-      <form>
-        <input type="checkbox" name="component" value="answer" checked>(A) 名称(Name)
-        <br>
-        <input type="checkbox" name="component" value="answer" checked>(B) 属性(Attribute)
-        <br>
-        <input type="checkbox" name="component" value="answer" checked>(C) 操作(Operation)
-        <br>
-        <input type="checkbox" name="component" value="answer">(D) 方法(Function)
-      </form>
+      <br>
+      <input type="checkbox" name="component" value="answer" checked>(A) 名称(Name)
+      <br>
+      <input type="checkbox" name="component" value="answer" checked>(B) 属性(Attribute)
+      <br>
+      <input type="checkbox" name="component" value="answer" checked>(C) 操作(Operation)
+      <br>
+      <input type="checkbox" name="component" value="answer">(D) 方法(Function)
     </li>
   </ol>
   <h2>四、判断题（每题10分，共20分）</h2>
   <ol>
     <li>
-      <form>
-        用例图只是用于和客户交流和沟通的,用于确定需求。
-        <input type="radio" name="answer" value ="answer">√
-        <input type="radio" name="answer" value ="answer" checked>×
-      </form>
+      用例图只是用于和客户交流和沟通的,用于确定需求。
+      <input type="radio" name="answer" value ="answer">√
+      <input type="radio" name="answer" value ="answer" checked>×
     </li>
     <li>
-      <form>
-          在状态图中,终止状态在一个状态图中允许有任意多个。
-        <input type="radio" name="answer" value ="true" checked>√
-        <input type="radio" name="answer" value ="fault">×
-      </form>  
+      在状态图中,终止状态在一个状态图中允许有任意多个。
+      <input type="radio" name="answer" value ="true" checked>√
+      <input type="radio" name="answer" value ="fault">× 
     </li>
   </ol>
   <h2>五、简答题（每题20分，共20分）</h2>
   <ol>
     <li>
       简述什么是模型以及模型的表现形式？
-      <form>
+      <br>
       <textarea name="message" rows="7" cols="110">模型是对现实世界的简化和抽象，模型是对所研究的系统、过程、事物或概念的一种表达形式。可以是物理实体；可以是某种图形；或者是一种数学表达式。
       </textarea>
-      </form>
     </li>
   </ol>
     <input type="button" value="计算分数" onclick="alert('Excellent!')">
+    </form>
   </body>
   </html>
