[shasha] feat-2.2: add audio in autoplay and loop

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Test</title>
 </head>
 <body>
+  <audio autoplay controls loop>
+    <source src="http://aqqmusic.tc.qq.com/amobile.music.tc.qq.com/C400002smLy40ZZpNm.m4a?guid=2323262752&vkey=AE9930276C296EB869AB5805FEBA86F72F4BF49965DFDEA5FF0AD7D898DAAB3AD299572FCAC5C320544F2ABC1CA2D872D4D0958A87C708CE&uin=0&fromtag=38" id="aud" >
+  </audio>
   <form>
   <h1>统一建模语言理论测试</h1>
   <table border="0">
