[shasha] fix-3.3: modify bkg img

--- a/css1.html
+++ b/css1.html
@@ -13,21 +13,23 @@
     </div>
     <div class="triangle"></div>
   </div>
-  <div class="blank">
-  </div>
+  <div class="blank"></div>
   <div class="list">
     <ul class="option">
-      <li class="heart">
+      <li>
+        <div class="heart"></div>
         <a href="#">
         Like
         </a>
       </li>
-      <li class="star">
+      <li>
+        <div class="star"></div>
         <a href="#">
         Favourite
         </a>
       </li>
-      <li class="chat">
+      <li>
+        <div class="chat"></div>
         <a href="#">
         Discuss
         </a>
