[shasha] fix-3.3: font style

--- a/css1.html
+++ b/css1.html
@@ -9,28 +9,28 @@
 <div class="bkg">
   <div class="nav">
     <div class="name">
-      <span>Saint</span>
+      <span>Saint Petersburg</span>
     </div>
     <div class="triangle"></div>
   </div>
   <div class="blank"></div>
   <div class="list">
     <ul class="option">
-      <li>
+      <li class="line">
         <div class="heart"></div>
-        <a href="#">
+        <a href="https://www.baidu.com/link?url=tITGWcKmHJipdljm1VUQigMPPZi2Eg92C_mOX-v8S7tBhXddeGcSybnQYuX2uiTC5ym7CxxD3lB4J2CZFC0C1lGiyQKynRnUf2V8miJoSCOZ0SEPvifQu2K2nFOJS8iZ&wd=&eqid=d5406aef008481b3000000035de001d0">
         Like
         </a>
       </li>
-      <li>
+      <li class="line">
         <div class="star"></div>
-        <a href="#">
+        <a href="https://www.baidu.com/link?url=tITGWcKmHJipdljm1VUQigMPPZi2Eg92C_mOX-v8S7tBhXddeGcSybnQYuX2uiTC5ym7CxxD3lB4J2CZFC0C1lGiyQKynRnUf2V8miJoSCOZ0SEPvifQu2K2nFOJS8iZ&wd=&eqid=d5406aef008481b3000000035de001d0">
         Favourite
         </a>
       </li>
-      <li>
+      <li class="no-line">
         <div class="chat"></div>
-        <a href="#">
+        <a href="https://www.baidu.com/link?url=tITGWcKmHJipdljm1VUQigMPPZi2Eg92C_mOX-v8S7tBhXddeGcSybnQYuX2uiTC5ym7CxxD3lB4J2CZFC0C1lGiyQKynRnUf2V8miJoSCOZ0SEPvifQu2K2nFOJS8iZ&wd=&eqid=d5406aef008481b3000000035de001d0">
         Discuss
         </a>
       </li>
